@@ -17,6 +17,7 @@
 
 #include <stdio.h>
 
+int
 main(int argc, char *argv[])
 {
   int i;
